--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "angular-cli": {},
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --proxy-config proxy.conf.json",
     "test": "ng test",
     "pree2e": "webdriver-manager update --standalone false --gecko false",
     "e2e": "protractor"
@@ -23,7 +23,7 @@
     "@types/gapi": "0.0.36",
     "@types/gapi.auth2": "0.0.48",
     "core-js": "^2.4.1",
-    "rxjs": "^5.0.1",
+    "rxjs": "^5.5.5",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.8.14"
   },
